Fix database related oversights